--- a/src/index.css
+++ b/src/index.css
@@ -2,16 +2,16 @@
 
 @font-face {
   font-family: "Rubik";
-  src: url("./assets/fonts/Rubik.woff2") format("woff2"),
-    url("./assets/fonts/Rubik.ttf") format("truetype");
+  src: url("./assets/fonts/RubikRegular.woff2") format("woff2"),
+    url("./assets/fonts/RubikRegular.ttf") format("truetype");
   font-weight: 400;
   font-style: normal;
 }
 
 @font-face {
   font-family: "Rubik";
-  src: url("./assets/fonts/Rubikbold.woff2") format("woff2"),
-    url("./assets/fonts/Rubikbold.ttf") format("truetype");
+  src: url("./assets/fonts/RubikBold.woff2") format("woff2"),
+    url("./assets/fonts/RubikBold.ttf") format("truetype");
   font-weight: 700;
   font-style: normal;
 }
